# Camio

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/edgeviewer/: MainActivity.kt
app/src/main/java/com/example/edgeviewer/camera/: CameraController.kt
app/src/main/java/com/example/edgeviewer/gl/: GLRenderer.kt  GLSurfaceRendererView.kt
app/src/main/java/com/example/edgeviewer/nativebridge/: NativeProcessor.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
web/: package-lock.json  package.json  tsconfig.json
web/public/: index.html
web/public/js/: index.js
web/src/: index.ts
